--- a/final-framework-testng/test-output/old/Default suite/methods.html
+++ b/final-framework-testng/test-output/old/Default suite/methods.html
@@ -1,18 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d5878c">  <td>20/06/29 10:30:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EditProfileTests.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.EditProfileTests@7a4ccb53]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@820914198</td>   <td></td> </tr>
-<tr bgcolor="d5878c">  <td>20/06/29 10:30:46</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EditProfileTests.setUp()[pri:0, instance:com.training.sanity.tests.EditProfileTests@7a4ccb53]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@820914198</td>   <td></td> </tr>
-<tr bgcolor="d5878c">  <td>20/06/29 10:30:57</td>   <td>10965</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditProfileTests.invalidEditProfileTest()[pri:0, instance:com.training.sanity.tests.EditProfileTests@7a4ccb53]">invalidEditProfileTest</td> 
-  <td>main@820914198</td>   <td></td> </tr>
-<tr bgcolor="d5878c">  <td>20/06/29 10:31:07</td>   <td>21065</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EditProfileTests.tearDown()[pri:0, instance:com.training.sanity.tests.EditProfileTests@7a4ccb53]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@820914198</td>   <td></td> </tr>
-<tr bgcolor="d5878c">  <td>20/06/29 10:31:09</td>   <td>22921</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EditProfileTests.setUp()[pri:0, instance:com.training.sanity.tests.EditProfileTests@7a4ccb53]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@820914198</td>   <td></td> </tr>
-<tr bgcolor="d5878c">  <td>20/06/29 10:31:19</td>   <td>33124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditProfileTests.validEditProfileTest()[pri:0, instance:com.training.sanity.tests.EditProfileTests@7a4ccb53]">validEditProfileTest</td> 
-  <td>main@820914198</td>   <td></td> </tr>
-<tr bgcolor="d5878c">  <td>20/06/29 10:31:31</td>   <td>45272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EditProfileTests.tearDown()[pri:0, instance:com.training.sanity.tests.EditProfileTests@7a4ccb53]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@820914198</td>   <td></td> </tr>
+<tr bgcolor="d5878c">  <td>20/07/05 16:56:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddAssessmentsTests.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.AddAssessmentsTests@33afa13b]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@203849460</td>   <td></td> </tr>
+<tr bgcolor="d5878c">  <td>20/07/05 16:56:16</td>   <td>250</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddAssessmentsTests.setUp()[pri:0, instance:com.training.sanity.tests.AddAssessmentsTests@33afa13b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@203849460</td>   <td></td> </tr>
+<tr bgcolor="d5878c">  <td>20/07/05 16:56:30</td>   <td>14040</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddAssessmentsTests.validAddAssessementTest()[pri:0, instance:com.training.sanity.tests.AddAssessmentsTests@33afa13b]">validAddAssessementTest</td> 
+  <td>main@203849460</td>   <td></td> </tr>
+<tr bgcolor="d5878c">  <td>20/07/05 16:56:53</td>   <td>37365</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddAssessmentsTests.tearDown()[pri:0, instance:com.training.sanity.tests.AddAssessmentsTests@33afa13b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@203849460</td>   <td></td> </tr>
 </table>
