--- a/final-framework-testng/test-output/old/Default suite/methods.html
+++ b/final-framework-testng/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d5878c">  <td>20/07/05 16:56:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddAssessmentsTests.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.AddAssessmentsTests@33afa13b]">&gt;&gt;setUpBeforeClass</td> 
+<tr bgcolor="d5878c">  <td>20/07/11 23:12:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegisterCourseTests.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.RegisterCourseTests@33afa13b]">&gt;&gt;setUpBeforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@203849460</td>   <td></td> </tr>
-<tr bgcolor="d5878c">  <td>20/07/05 16:56:16</td>   <td>250</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddAssessmentsTests.setUp()[pri:0, instance:com.training.sanity.tests.AddAssessmentsTests@33afa13b]">&gt;&gt;setUp</td> 
+<tr bgcolor="d5878c">  <td>20/07/11 23:12:53</td>   <td>33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegisterCourseTests.setUp()[pri:0, instance:com.training.sanity.tests.RegisterCourseTests@33afa13b]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@203849460</td>   <td></td> </tr>
-<tr bgcolor="d5878c">  <td>20/07/05 16:56:30</td>   <td>14040</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddAssessmentsTests.validAddAssessementTest()[pri:0, instance:com.training.sanity.tests.AddAssessmentsTests@33afa13b]">validAddAssessementTest</td> 
+<tr bgcolor="d5878c">  <td>20/07/11 23:13:05</td>   <td>11941</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterCourseTests.validCreateCourseTest()[pri:0, instance:com.training.sanity.tests.RegisterCourseTests@33afa13b]">validCreateCourseTest</td> 
   <td>main@203849460</td>   <td></td> </tr>
-<tr bgcolor="d5878c">  <td>20/07/05 16:56:53</td>   <td>37365</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddAssessmentsTests.tearDown()[pri:0, instance:com.training.sanity.tests.AddAssessmentsTests@33afa13b]">&lt;&lt;tearDown</td> 
+<tr bgcolor="d5878c">  <td>20/07/11 23:14:01</td>   <td>68101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RegisterCourseTests.tearDown()[pri:0, instance:com.training.sanity.tests.RegisterCourseTests@33afa13b]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@203849460</td>   <td></td> </tr>
 </table>
